welcome.lessons.welcome.instructions.Instructions.scala.error
Program:3: error: illegal start of simple pattern
for(int j=0;j<4;j++)
         ^Program:3: error: '<-' expected but ';' found.
for(int j=0;j<4;j++)
           ^Program:3: error: '<-' expected but ';' found.
for(int j=0;j<4;j++)
               ^Program:3: error: illegal start of simple pattern
for(int j=0;j<4;j++)
                   ^Program:15: error: illegal start of simple expression
	}
        ^