welcome.lessons.welcome.instructions.Instructions.scala.code
baisseBrosse()

for(int j=0;j<4;j++)
{
	for(int i=0;i<2;i++)
	{
		avance()
	}
	droite()
}

leveBrosse()
